# RTIPVD_2.0

./: .env.example  .gitignore  README.md  RTIPVD_Technical_Report.docx  main.py  pyproject.toml  setup.py  setup_structure.sh  test_zone.py  test_zones.geojson
config/: bytetrack.yaml  config.example.py  config.py
dashboard/backend/: app.py  routes.py
dashboard/frontend/: app.js  index.html  operations.css  operations.html  operations.js  styles.css
data/geofencing/: No_Parking_Zones.geojson
deploy/laptop/: README.md  laptop.env.example  run_laptop.ps1  start_backend.ps1  start_stream_server.ps1
deploy/raspberry_pi/: README.md  pi.env.example  run_pi.sh  send_stream.sh  send_video_and_gps.py  setup.sh  upload_from_windows.ps1
docs/: BEGINNER_GUIDE.md  PROJECT_EXPLANATION.md  STREAMING_ARCHITECTURE.md  api_reference.md  parking_detection_explanation.md
raspberry_pi_sender_bundle/: .env.example  README_UPLOAD.md  requirements.txt
raspberry_pi_sender_bundle/config/: config.py
scripts/: calculate_vehicle_geocoords.py  clear_database.py  clear_laptop_db.py  download_weights.py  laptop_stream_server.py  verify_setup.py
src/: __init__.py
src/analyzer/: __init__.py  calibrator.py  parking_analyzer.py
src/database/: db_manager.py  models.py
src/detection/: __init__.py  vehicle_detector.py  vehicle_tracker.py
src/ego_motion/: __init__.py  lane_detector.py  motion_estimator.py
src/evidence/: __init__.py  gps_tagger.py  violation_service.py
src/geospatial/: __init__.py  zone_checker.py  (+1 more)
tests/: test_streaming_sync.py
weights/: README.md  best.cache
(+31 files in other folders)
